--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "tsc -p . & node dist/server.js",
     "build": "tsc -p .",
     "dev": "nodemon src/server.ts",
     "prod": "npm run build && npm start"
@@ -19,6 +19,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   }
 }
