--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
+    "@types/method-override": "^0.0.35",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "nodemon": "^3.1.0"
