--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.12.8",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
+    "mongoose": "^8.3.4",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
