--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
+    "cloudinary": "^1.41.3",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
