--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@types/isotope-layout": "^3.0.13",
     "@types/react-slick": "^0.23.13",
+    "cloudinary": "^1.41.3",
+    "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.4.5",
     "isotope-layout": "^3.0.6",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pageflip": "^2.0.3",
