--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/connect-flash": "^0.0.40",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.8",
+    "connect-flash": "^0.1.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
