--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.8",
     "connect-flash": "^0.1.1",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "method-override": "^3.0.0",
