--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.8",
+    "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -28,6 +29,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/ejs": "^3.1.5",
     "@types/method-override": "^0.0.35",
     "@types/multer": "^1.4.11",
