--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/connect-flash": "^0.0.40",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.8",
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
