--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.12.8",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
@@ -27,6 +28,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1"
   },
